
Slick 8.x-1.0-dev, 2016-11-14
-----------------------------
- Fixed for colorbox regression with the recent JS move into Blazy.

Slick 8.x-1.0-dev, 2016-11-09
-----------------------------
- A few cleanups.
- Fixed for the new Grid and CSS3 Columns at field formatter settings not saved.

Slick 8.x-1.0-dev, 2016-11-01
-----------------------------
- Simplified settings.arrow.attributes to arrow_attributes.
- Simplified settings.downArrow.attributes to arrow_down_attributes.

Slick 8.x-1.0-dev, 2016-10-31
-----------------------------
- Added support for Blazy new CSS3 Columns along with Grid Foundation.
- Moved "the failsafe for deleted optionset while being used" outside Slick.php
  since it was breaking Add/Duplicate operations, till proper fix.
- Updated Slick colorbox JS file to re-use blazy.colorbox because Blazy now
  also supports Media Entity for colorbox videos.

Slick 8.x-1.0-dev, 2016-10-25
-----------------------------
- Minified please. Never commit anything when you are tired.
- Added optional "Slick Image with Media" formatter to retain VEM/ME within
  image/file ER environment if VEM/ME is installed.
- Moved Slick grid CSS foundation into Blazy for reusability outside slick, such
  as with core Views HTML list, or even Unformatted format.
- Respected "Vanilla slick" option when using grid items.
- Cleaned up and refined slick.theme.css for better UX.
- Brought back the slide offset temp fix for when count <= slidesTosShow as no
  resolution, by now. To be removed when the actual fix is available.
- Ported the failsafe for deleted optionset while being used.
- Added Twig block section for easy partial extensions, and reduce dups.

Slick 8.x-1.0-dev, 2016-10-03
-----------------------------
- Fixed for nested slicks with a full screen skin.

Slick 8.x-1.0-dev, 2016-09-29
-----------------------------
- Marked it Beta4.
- #2799617 by trobey: Include project namespace for module dependencies.
- Removed useless spaceless from sub-templates.