@@ -49,11 +49,16 @@ function template_preprocess_slick(&$variables) {
   $settings['lazy'] = isset($settings['lazy']) ? $settings['lazy'] : $js['lazyLoad'];
 
   // Blazy can still lazyload an unslick.
-  if ($display != 'thumbnail' && ($settings['lazy'] == 'blazy' || !empty($settings['blazy']))) {
-    $js['lazyLoad'] = 'blazy';
-    $blazy = empty($settings['blazy_data']) ? [] : $settings['blazy_data'];
-    $blazy['ratio'] = $settings['ratio'];
-    $attributes['data-blazy'] = Json::encode($blazy);
+  if ($display != 'thumbnail') {
+    if ($settings['lazy'] == 'blazy' || !empty($settings['blazy'])) {
+      $js['lazyLoad'] = 'blazy';
+      $attributes['data-blazy'] = empty($settings['blazy_data']) ? '' : Json::encode($settings['blazy_data']);
+    }
+
+    // Supports Photoswipe integration.
+    if ($settings['media_switch'] == 'photoswipe') {
+      $attributes['class'][] = 'photoswipe-gallery';
+    }
   }
 
   if ($js['rtl']) {
