@@ -1,4 +1,9 @@
 
+Slick 8.x-1.0-dev, 2016-11-17
+-----------------------------
+- Removed the no-longer needed SlickFormatter::getMediaSwitch() overrides as
+  slick colorbox is using blazy colorbox.
+
 Slick 8.x-1.0-dev, 2016-11-14
 -----------------------------
 - Fixed for colorbox regression with the recent JS move into Blazy.
